--- a/apps/wallet-mobile/translations/messages/src/features/Settings/SettingsScreenNavigator.json
+++ b/apps/wallet-mobile/translations/messages/src/features/Settings/SettingsScreenNavigator.json
@@ -4,14 +4,14 @@
     "defaultMessage": "!!!Wallet",
     "file": "src/features/Settings/SettingsScreenNavigator.tsx",
     "start": {
-      "line": 165,
+      "line": 174,
       "column": 18,
-      "index": 5119
+      "index": 5357
     },
     "end": {
-      "line": 168,
+      "line": 177,
       "column": 3,
-      "index": 5217
+      "index": 5455
     }
   },
   {
@@ -19,14 +19,14 @@
     "defaultMessage": "!!!Application",
     "file": "src/features/Settings/SettingsScreenNavigator.tsx",
     "start": {
-      "line": 169,
+      "line": 178,
       "column": 15,
-      "index": 5234
+      "index": 5472
     },
     "end": {
-      "line": 172,
+      "line": 181,
       "column": 3,
-      "index": 5343
+      "index": 5581
     }
   },
   {
@@ -34,14 +34,14 @@
     "defaultMessage": "!!!Change PIN",
     "file": "src/features/Settings/SettingsScreenNavigator.tsx",
     "start": {
-      "line": 173,
+      "line": 182,
       "column": 24,
-      "index": 5369
+      "index": 5607
     },
     "end": {
-      "line": 176,
+      "line": 185,
       "column": 3,
-      "index": 5478
+      "index": 5716
     }
   },
   {
@@ -49,14 +49,14 @@
     "defaultMessage": "!!!Change spending password",
     "file": "src/features/Settings/SettingsScreenNavigator.tsx",
     "start": {
-      "line": 177,
+      "line": 186,
       "column": 23,
-      "index": 5503
+      "index": 5741
     },
     "end": {
-      "line": 180,
+      "line": 189,
       "column": 3,
-      "index": 5617
+      "index": 5855
     }
   },
   {
@@ -64,14 +64,14 @@
     "defaultMessage": "!!!Remove wallet",
     "file": "src/features/Settings/SettingsScreenNavigator.tsx",
     "start": {
-      "line": 181,
+      "line": 190,
       "column": 21,
-      "index": 5640
+      "index": 5878
     },
     "end": {
-      "line": 184,
+      "line": 193,
       "column": 3,
-      "index": 5741
+      "index": 5979
     }
   },
   {
@@ -79,14 +79,14 @@
     "defaultMessage": "!!!Terms of Service Agreement",
     "file": "src/features/Settings/SettingsScreenNavigator.tsx",
     "start": {
-      "line": 185,
+      "line": 194,
       "column": 23,
-      "index": 5766
+      "index": 6004
     },
     "end": {
-      "line": 188,
+      "line": 197,
       "column": 3,
-      "index": 5882
+      "index": 6120
     }
   },
   {
@@ -94,14 +94,14 @@
     "defaultMessage": "!!!Change wallet name",
     "file": "src/features/Settings/SettingsScreenNavigator.tsx",
     "start": {
-      "line": 189,
+      "line": 198,
       "column": 25,
-      "index": 5909
+      "index": 6147
     },
     "end": {
-      "line": 192,
+      "line": 201,
       "column": 3,
-      "index": 6013
+      "index": 6251
     }
   },
   {
@@ -109,14 +109,14 @@
     "defaultMessage": "!!!Support",
     "file": "src/features/Settings/SettingsScreenNavigator.tsx",
     "start": {
-      "line": 193,
+      "line": 202,
       "column": 16,
-      "index": 6031
+      "index": 6269
     },
     "end": {
-      "line": 196,
+      "line": 205,
       "column": 3,
-      "index": 6122
+      "index": 6360
     }
   },
   {
@@ -124,14 +124,14 @@
     "defaultMessage": "!!!Easy confirmation",
     "file": "src/features/Settings/SettingsScreenNavigator.tsx",
     "start": {
-      "line": 197,
+      "line": 206,
       "column": 31,
-      "index": 6155
+      "index": 6393
     },
     "end": {
-      "line": 200,
+      "line": 209,
       "column": 3,
-      "index": 6270
+      "index": 6508
     }
   },
   {
@@ -139,14 +139,14 @@
     "defaultMessage": "!!!Easy confirmation",
     "file": "src/features/Settings/SettingsScreenNavigator.tsx",
     "start": {
-      "line": 201,
+      "line": 210,
       "column": 32,
-      "index": 6304
+      "index": 6542
     },
     "end": {
-      "line": 204,
+      "line": 213,
       "column": 3,
-      "index": 6420
+      "index": 6658
     }
   },
   {
@@ -154,14 +154,14 @@
     "defaultMessage": "!!!Set PIN",
     "file": "src/features/Settings/SettingsScreenNavigator.tsx",
     "start": {
-      "line": 205,
+      "line": 214,
       "column": 18,
-      "index": 6440
+      "index": 6678
     },
     "end": {
-      "line": 208,
+      "line": 217,
       "column": 3,
-      "index": 6532
+      "index": 6770
     }
   },
   {
@@ -169,14 +169,14 @@
     "defaultMessage": "!!!Settings",
     "file": "src/features/Settings/SettingsScreenNavigator.tsx",
     "start": {
-      "line": 209,
+      "line": 218,
       "column": 17,
-      "index": 6551
+      "index": 6789
     },
     "end": {
-      "line": 212,
+      "line": 221,
       "column": 3,
-      "index": 6654
+      "index": 6892
     }
   },
   {
@@ -184,14 +184,14 @@
     "defaultMessage": "!!!Language",
     "file": "src/features/Settings/SettingsScreenNavigator.tsx",
     "start": {
-      "line": 213,
+      "line": 222,
       "column": 17,
-      "index": 6673
+      "index": 6911
     },
     "end": {
-      "line": 216,
+      "line": 225,
       "column": 3,
-      "index": 6771
+      "index": 7009
     }
   },
   {
@@ -199,14 +199,14 @@
     "defaultMessage": "!!!App settings",
     "file": "src/features/Settings/SettingsScreenNavigator.tsx",
     "start": {
-      "line": 217,
+      "line": 226,
       "column": 20,
-      "index": 6793
+      "index": 7031
     },
     "end": {
-      "line": 220,
+      "line": 229,
       "column": 3,
-      "index": 6911
+      "index": 7149
     }
   },
   {
@@ -214,14 +214,29 @@
     "defaultMessage": "!!!About",
     "file": "src/features/Settings/SettingsScreenNavigator.tsx",
     "start": {
-      "line": 221,
+      "line": 230,
       "column": 14,
-      "index": 6927
+      "index": 7165
     },
     "end": {
-      "line": 224,
+      "line": 233,
       "column": 3,
-      "index": 7027
+      "index": 7265
+    }
+  },
+  {
+    "id": "components.settings.applicationsettingsscreen.analyticsTitle",
+    "defaultMessage": "!!!User Insights",
+    "file": "src/features/Settings/SettingsScreenNavigator.tsx",
+    "start": {
+      "line": 234,
+      "column": 16,
+      "index": 7283
+    },
+    "end": {
+      "line": 237,
+      "column": 3,
+      "index": 7400
     }
   }
 ]
